# voip-crm-dioxus

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  MANUAL_VERIFICATION_6.2.md  README.md  RECORDING_LIFECYCLE.md  RETENTION_CALCULATION.md  RETENTION_POLICY_TESTS_VERIFICATION_7.4.md  STORAGE_CONFIG_VERIFICATION.md  STORAGE_USAGE_TRACKING.md  SUBTASK_3.3_VERIFICATION.md  SUBTASK_4.5_VERIFICATION.md  SUBTASK_6.5_VERIFICATION.md  docker-compose.yml  index.html
.auto-claude/specs/001-api-authentication-protection/: acceptance-criteria-verification.md  expired-token-verification.md  implementation_plan.json
.auto-claude/specs/001-user-registration-flow/: manual-test-edge-cases.md  test-checklist.md
assets/: index.html  styles.css
docker/: Dockerfile
docs/: API-AUTHENTICATION.md  RECORDING-API.md
migrations/: 001_initial_schema.sql  002_ai_enhancements.sql  003_email_verification.sql  004_call_recordings.sql  005_recording_retention_policies.sql  006_storage_usage_log.sql  007_add_recording_fields_to_campaigns.sql  008_recording_audit_log.sql
src/: main.rs  routes.rs
src/api/: agents.rs  ai.rs  auth.rs  calls.rs  campaigns.rs  client.rs  config.rs  leads.rs  mod.rs  recordings.rs  sip.rs
src/components/: common.rs  mod.rs
src/components/ai/: mod.rs  prompts.rs  settings.rs
src/components/leads/: card.rs  details.rs  list.rs  mod.rs
src/components/phone/: call_status.rs  dialer.rs  mod.rs  sip_dialer.rs  webrtc.rs  webrtc_dialer.rs
src/components/recordings/: dashboard.rs  list.rs  mod.rs  player.rs  search.rs
src/components/supervisor/: agents.rs  campaigns.rs  dashboard.rs  invite_dialog.rs  mod.rs
src/models/: agent.rs  ai.rs  auth.rs  call.rs  campaign.rs  lead.rs  mod.rs  recording.rs
src/server/: ai_call_handler.rs  automation.rs  claude.rs  email.rs  mod.rs  recordings_api.rs  retention_policy_tests.rs
src/server/auth/: mod.rs
src/server/db/: agents.rs  ai.rs  calls.rs  campaigns.rs  invitations.rs  leads.rs  mod.rs  recordings.rs  stats.rs  users.rs
src/server/sip/: audio_converter.rs  audio_mixer.rs  call.rs  codec.rs  config.rs  mod.rs  recording_integration_tests.rs  rtp.rs  user_agent.rs
src/server/storage/: encryption.rs  mod.rs  tests.rs
src/server/telnyx/: mod.rs
src/state/: auth.rs  calls.rs  mod.rs  ui.rs  webrtc.rs
static/: index.html
